After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756046 - FTBFS due to a wrong function name
FTBFS due to a wrong function name
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-04 13:30 UTC by Emmanuele Bassi (:ebassi)
Modified: 2015-10-04 16:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use the right symbol for resetting a settings property (1008 bytes, patch)
2015-10-04 13:31 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Emmanuele Bassi (:ebassi) 2015-10-04 13:30:39 UTC
The function to reset a GtkSettings property is gtk_settings_reset_property().
Comment 1 Emmanuele Bassi (:ebassi) 2015-10-04 13:31:19 UTC
Created attachment 312633 [details] [review]
Use the right symbol for resetting a settings property

The function in GTK+ 3.19 is called gtk_settings_reset_property(), not
gtk_settings_reset().
Comment 2 Emmanuele Bassi (:ebassi) 2015-10-04 13:31:54 UTC
Please, revert commit d99744a31c3678a3dc2d917337b86d2329542bd6 in gnome-continuous after closing this bug.
Comment 3 Emmanuele Bassi (:ebassi) 2015-10-04 16:54:21 UTC
Attachment 312633 [details] pushed as 7354f24 - Use the right symbol for resetting a settings property