Use the right symbol for resetting a settings property

The function in GTK+ 3.19 is called gtk_settings_reset_property(), not
gtk_settings_reset().

https://bugzilla.gnome.org/show_bug.cgi?id=756046